<resources>
    <string name="app_name">Stats Don\'t Lie</string>
    <string name="welcome_message_guest">Welcome guest!</string>
    <string name="welcome_message_username">Welcome %1$s!</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="games">Games</string>
    <string name="basketball_player_jersey_description">Basketball player jersey</string>
    <string name="two_basketball_players_description">Two basketball players</string>
    <string name="basketball_description">Basketball</string>
    <string name="who_are_you">Who are you?</string>
    <string name="edit_name_text">Enter your name or nickname</string>
    <string name="done">Done</string>
    <string name="about_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.
    </string>
    <string name="about">About</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_detail">Player detail</string>

    <string name="lebron_james">Lebron James</string>
    <string name="anthony_davis">Anthony Davis</string>
    <string name="kevin_durant">Kevin Durant</string>

    <string name="forward">Forward</string>
    <string name="guard">Guard</string>
    <string name="center">Center</string>

    <string name="lakers">Los Angeles Lakers</string>
    <string name="warriors">Golden State Warriors</string>
    <string name="nets">Brooklin Nets</string>
    <string name="current_season_averages">Current Season Averages</string>
    <string name="games_played">Games Played:</string>
    <string name="minutes_averaged">Minutes averaged:</string>
    <string name="points_averaged">Points averaged:</string>
    <string name="rebounds_average">Rebounds average:</string>
    <string name="assists_averaged">Assists averaged:</string>
    <string name="field_goals_pct">Field goals pct:</string>
    <string name="three_field_goals_pct">Three field goals pct:</string>
    <string name="ft_field_goals_pct">Ft field goals pct:</string>

    <string name="player_full_name">%s %s</string>
    <string name="search_title">Search player</string>

</resources>
