<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/welcome_message_guest"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_title" />

        <LinearLayout style="@style/main_menu_linear_layout_style">

            <ImageView
                android:id="@+id/players_image"
                style="@style/main_menu_image_style"
                android:contentDescription="@string/basketball_player_jersey_description"
                android:src="@drawable/basketball_jersey_1" />

            <Button
                android:id="@+id/players_btn"
                style="@style/main_menu_btn_style"
                android:text="@string/players" />

        </LinearLayout>

        <LinearLayout style="@style/main_menu_linear_layout_style">

            <ImageView
                android:id="@+id/teams_image"
                style="@style/main_menu_image_style"
                android:contentDescription="@string/two_basketball_players_description"
                android:src="@drawable/basketball_players_1" />

            <Button
                android:id="@+id/teams_btn"
                style="@style/main_menu_btn_style"
                android:text="@string/teams" />

        </LinearLayout>

        <LinearLayout style="@style/main_menu_linear_layout_style">

            <ImageView
                android:id="@+id/games_image"
                style="@style/main_menu_image_style"
                android:contentDescription="@string/basketball_description"
                android:src="@drawable/basketball" />

            <Button
                android:id="@+id/games_btn"
                style="@style/main_menu_btn_style"
                android:text="@string/games" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/who_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_are_you"
                android:textAlignment="center"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/who_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_name_text"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/who_done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done" />

        </LinearLayout>

    </LinearLayout>

</layout>