<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/welcome_message_guest"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/basketball_player_jersey_description"
            app:layout_constraintEnd_toStartOf="@id/players_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:srcCompat="@drawable/basketball_jersey_black" />

        <Button
            android:id="@+id/players_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/players"
            app:layout_constraintBottom_toBottomOf="@id/player_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_image"
            app:layout_constraintTop_toTopOf="@id/player_image" />

        <ImageView
            android:id="@+id/team_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/two_basketball_players_description"
            app:layout_constraintEnd_toStartOf="@id/teams_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_image"
            app:srcCompat="@drawable/basketball_players_black" />

        <Button
            android:id="@+id/teams_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/teams"
            app:layout_constraintBottom_toBottomOf="@id/team_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/team_image"
            app:layout_constraintTop_toTopOf="@id/team_image" />

        <ImageView
            android:id="@+id/games_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/basketball_description"
            app:layout_constraintEnd_toStartOf="@id/games_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_image"
            app:srcCompat="@drawable/basketball" />

        <Button
            android:id="@+id/games_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/games"
            app:layout_constraintBottom_toBottomOf="@id/games_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/games_image"
            app:layout_constraintTop_toTopOf="@id/games_image" />

        <TextView
            android:id="@+id/who_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:text="@string/who_are_you"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/games_image" />

        <EditText
            android:id="@+id/who_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:ems="10"
            android:hint="@string/edit_name_text"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/who_text" />

        <Button
            android:id="@+id/who_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/who_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>