<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/player_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/basketball_player_jersey_description"
            app:layout_constraintBottom_toTopOf="@id/team_image"
            app:layout_constraintEnd_toStartOf="@id/players_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:srcCompat="@drawable/basketball_jersey_black" />

        <ImageView
            android:id="@+id/team_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/two_basketball_players_description"
            app:layout_constraintBottom_toTopOf="@id/games_image"
            app:layout_constraintEnd_toStartOf="@id/teams_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_image"
            app:srcCompat="@drawable/basketball_players_black" />

        <ImageView
            android:id="@+id/games_image"
            style="@style/main_menu_image_constraint_style"
            android:contentDescription="@string/basketball_description"
            app:layout_constraintEnd_toStartOf="@id/games_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/basketball" />

        <Button
            android:id="@+id/players_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/players"
            app:layout_constraintBottom_toBottomOf="@id/player_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_image"
            app:layout_constraintTop_toTopOf="@id/player_image" />

        <Button
            android:id="@+id/teams_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/teams"
            app:layout_constraintBottom_toBottomOf="@id/team_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/team_image"
            app:layout_constraintTop_toTopOf="@id/team_image" />


        <Button
            android:id="@+id/games_btn"
            style="@style/main_menu_btn_constraint_style"
            android:text="@string/games"
            app:layout_constraintBottom_toBottomOf="@id/games_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/games_image"
            app:layout_constraintTop_toTopOf="@id/games_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>