<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/player_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/player_list_item_height"
    android:layout_margin="@dimen/small_margin"
    android:background="@drawable/layout_border">

    <TextView
        android:id="@+id/player_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/player_item_position"

        tools:text="@string/lebron_james"/>

    <TextView
        android:id="@+id/player_item_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_item_name"
        app:layout_constraintEnd_toStartOf="@id/player_item_team"

        tools:text="@string/forward"/>

    <TextView
        android:id="@+id/player_item_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_item_position"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="@string/lakers"/>

</androidx.constraintlayout.widget.ConstraintLayout>